# new-fastapi-features

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.integration-tests  Dockerfile.unit-tests  README.md  docker-compose.integration-tests.yml  list.txt  pyproject.toml
app/: config.py  dependencies.py  main.py
app/routers/: pokemon.py
app/schemas/: pokemon.py  query.py
app/services/: llm_providers.py
tests/integration/: conftest.py  test_api.py
tests/mocks/: mock_llm_provider.py
tests/unit/: test_api.py  test_llm_providers.py
